--- a/config/game_data_template.yaml
+++ b/config/game_data_template.yaml
@@ -3,37 +3,6 @@
 # value specified here.  When game ends or when defaults are restored, 
 # game_data will be written and will then contain every item here.
 
-Audits:
-  Average Ball Time: 0
-  Average Game Time: 0
-  Average Score: 0
-  Games Played: 0
-  Games Started: 0
-  Balls Played: 0
-  Left Flippers: 0
-  Right Flippers: 0
-  Left Inlanes: 0
-  Right Inlanes: 0
-  Left Outlane Drains: 0
-  Right Outlane Drains: 0
-  Lower Jet Hits: 0
-  Upper Jet Hits: 0
-  Saucers: 0
-  Credits: 0
-  Skyway Tolls: 0
-  Cellar Visits: 0
-  Tornados: 0
-  Left Ramps: 0
-  3-Bank Drop Targets Hits: 0
-Time Stamps:
-  First Boot-Up: 'Not Set'
-  Last Boot-Up: 'Not Set'
-  Overall Time On: 0
-  Overall Game Time: 0
-  Last Game Start: 'Not Set'
-  Last GC Score Entry: 'Not Set'
-  Last High Score Entry: 'Not Set'
-  Last Replay: 'Not Set'
 ClassicHighScoreData:
 - {date: 'Sun Oct  3 17:38:46 2010', inits: JIM, score: 5000000}
 - {date: 'Sun Oct  3 17:44:49 2010', inits: TOM, score: 4000000}
@@ -42,5 +11,9 @@ ClassicHighScoreData:
 - {date: 'Sun Oct  3 22:05:01 2010', inits: RAA, score: 1000000}
 SuperJetsChampion:
 - {date: 'Sun Oct  3 17:38:46 2010', inits: JIM, score: 200}
+SkywayChampion:
+- {date: 'Sun Oct  3 17:38:46 2010', inits: PLA, score: 200}
+MultiBallChampion:
+- {date: 'Sun Oct  3 17:38:46 2010', inits: TOM, score: 200}
 Hidden:
   Total Score: 0
